terraform/modules/alb/main.tf
# ── Application Load Balancer ───────────────────────────────

terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.0"
    }
  }
}

resource "aws_lb" "this" {
  name               = var.alb_name
  internal           = false
  load_balancer_type = "application"
  security_groups    = [var.security_group_id]
  subnets            = var.public_subnet_ids
  tags               = { Name = var.alb_name }

  lifecycle {
    ignore_changes = all
  }
}

resource "aws_lb_target_group" "fe" {
  name        = "lks-tg-fe"
  port        = 3000
  protocol    = "HTTP"
  vpc_id      = var.vpc_id
  target_type = "ip"

  health_check {
    path                = "/health"
    interval            = 30
    healthy_threshold   = 2
    unhealthy_threshold = 3
  }
  tags = { Name = "lks-tg-fe" }

  lifecycle {
    ignore_changes = all
  }
}

resource "aws_lb_target_group" "api" {
  name        = "lks-tg-api"
  port        = 8080
  protocol    = "HTTP"
  vpc_id      = var.vpc_id
  target_type = "ip"

  health_check {
    path                = "/api/health"
    interval            = 30
    healthy_threshold   = 2
    unhealthy_threshold = 3
  }
  tags = { Name = "lks-tg-api" }

  lifecycle {
    ignore_changes = all
  }
}

resource "aws_lb_target_group" "analytics" {
  name        = "lks-tg-analytics"
  port        = 5000
  protocol    = "HTTP"
  vpc_id      = var.vpc_id
  target_type = "ip"

  health_check {
    path                = "/api/stats/health"
    interval            = 30
    healthy_threshold   = 2
    unhealthy_threshold = 3
  }
  tags = { Name = "lks-tg-analytics" }

  lifecycle {
    ignore_changes = all
  }
}

resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.this.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.fe.arn
  }

  lifecycle {
    ignore_changes = all
  }
}

resource "aws_lb_listener_rule" "api" {
  listener_arn = aws_lb_listener.http.arn
  priority     = 1

  action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.analytics.arn
  }
  condition {
    path_pattern { values = ["/api/stats/*"] }
  }

  lifecycle {
    ignore_changes = all
  }
}

resource "aws_lb_listener_rule" "api" {
  listener_arn = aws_lb_listener.http.arn
  priority     = 2

  action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.api.arn
  }
  condition {
    path_pattern { values = ["/api/*"] }
  }

  lifecycle {
    ignore_changes = all
  }
}
